# hungry-birds

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac  hungry_birds.c  hungry_birds_processes.c  hungry_birds_threads.c
C/: Makefile.am  hungry_birds_processes.c  hungry_birds_threads.c
C++/: Makefile.am  README  configure.ac  hungry_birds.cc
Java/: HungryBirds.java  README  build.xml  pom.xml
Java/src/main/java/org/epalrov/hungrybirds/: HungryBirds.java
Python/: AUTHORS  README  hungry_birds.py  hungry_birds_class.py
Spring/: README  pom.xml
Spring/src/main/java/org/epalrov/hungrybirds/: HungryBirds.java  HungryBirdsBaby.java  HungryBirdsBabyFactory.java  HungryBirdsEnv.java  HungryBirdsParent.java  HungryBirdsParentFactory.java
Spring/src/main/resources/: hungry-birds-beans.xml
